--- a/main.html
+++ b/main.html
@@ -16,13 +16,15 @@
         <input type="number" placeholder="Valor do produto..." id="price" step="0.01">
         <input type="submit" id="add" value="Cadastrar">
     </div>
-    <div class="lista-produto">
-        <h2>Lista Produtos</h2>
-    </div>
+    <div class="lista-produto"></div>
         
         <div class="soma-total">
             <h1>Total: R$0,00</h1>
         </div>
+
+    <div class="limpar-carrinho">
+        <button name="limpar">Limpar Lista</button>
+    </div>
 
     <script src="main.js"></script>
 </body>
